--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <div class="container">
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <!-- the debug(params) will only show in the development environment and not production environments which have been deployed and which are visible to the application's users -->
+      <%= debug(params) if Rails.env.development? %>
     </div>  
   </body>
 </html>
