Finished login/logout

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,6 +11,6 @@
 
 </div>
 
-<!-- image_tag helper method which takes the image path as an argument as well as the the alt attribute of that image. Need to put  -->
+<!-- image_tag helper method which takes the image path as an argument as well as the the alt attribute of that image. -->
 <%= link_to image_tag("rails.png", alt: "Rails logo"), 
             'http://rubyonrails.org/' %>
